[package]
name = "API"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["form", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
futures-util = "0.3.31"
moka = { version = "0.12.10", features = ["future"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shuttle-axum = "0.55.0"
shuttle-runtime = { version = "0.55.0", features = ["setup-otel-exporter"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["compression-gzip", "fs"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
